--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,51 @@
-.loader {
-    border: 15px solid #f3f3f3;
-    border-radius: 150%;
-    border-top: 16px solid #3498db;
-    width: 10px;
-    height: 10px;
-    -webkit-animation: spin 2s linear infinite; /* Safari */
-    animation: spin 2s linear infinite;
-  }
+:root {
+    --inputHeigth: 3.125rem;
+    --inputWidth: 37.6rem;
+    --checkWidth: 3.75rem;
+    --checkHeigth: 3.75rem;
+    --randomColor: Math.floor(Math.random()*16777215).toString(16);
+}
 
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+html {
+    background-color: #e0edf5;
+}
+    
+.container {
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    width: var(--inputWidth);
+
+    .layout-add-task {
+
+        background-color: white;
+        display: inline-flex;
+        align-items: center;
+        padding: 0 5px 0px 5px;
+        height: var(--inputHeigth);
+        border-style: solid;
+        border-color: #b1abab;
+        border-width: 1px;
+        border-radius: 5px;
+        margin-bottom: 10px;
+
+        .text-field-input {
+            width: 375px;
+            border-style: none;
+        }
+
+        .btn-task {
+            background-color: #3ecc9f;
+            border-radius: inherit;
+            border-width: 1px;
+            border-style: groove;
+            border-color: #3ecc9f;
+            height: calc(var(--inputHeigth) / 1.2);        
+            width: var(--checkWidth);
+            margin-left: 10px;
+        }
+    }
+
+}
