--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 html {
     background-color: #e0edf5;
 }
-    
+
 .container {
     
     display: flex;
@@ -48,4 +48,18 @@ html {
         }
     }
 
+    .loader {
+        border: 5px solid #f3f3f3;
+        border-radius: 150%;
+        border-top: 6px solid #3498db;
+        width: 20px;
+        height: 20px;
+        animation: spin 2s linear infinite;
+
+    }
 }
+    
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+} 
